# WhatsApp-bot

./: .gitignore
pdf_microservice/: pdf_service.py
rust_bot/: Cargo.toml  test_config.yml
rust_bot/src/: main.rs  pdf.rs  user_state.rs  workflow.rs
