[package]
name = "AVAP_test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
actix-web = "4.9.0"
serde_yaml = "0.9.34+deprecated"
reqwest = { version = "0.12.5", features = ["json"] }
serde_urlencoded = "0.7.1"
tokio = "1.39.2"
dashmap = "6.0.1"